dev: add leaflet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,7 @@
   <span>MyWays</span>
 </mat-toolbar>
 
-First build test
+<div style="height: 100%;"
+     leaflet
+     [leafletOptions]="options">
+</div>
