dev: update leaflet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,4 @@
   <span>MyWays</span>
 </mat-toolbar>
 
-<div style="height: 100%;"
-     leaflet
-     [leafletOptions]="options">
-</div>
+<div class="leaflet" leaflet [leafletOptions]="options"></div>
