--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
   <span>MyWays</span>
 </mat-toolbar>
 
-<div class="leaflet" leaflet [leafletOptions]="options"></div>
+<div class="leaflet" leaflet [leafletOptions]="options" (leafletMapReady)="onMapReady($event)">
+  ></div>
