--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,4 @@
   <mat-icon>local_fire_department</mat-icon>
   <span>MyWays</span>
 </mat-toolbar>
-
-<div class="leaflet" leaflet [leafletOptions]="options" (leafletMapReady)="onMapReady($event)">
-  ></div>
+<app-map></app-map>
